--- a/package.json
+++ b/package.json
@@ -19,7 +19,17 @@
         "command": "calculator.evaluate",
         "title": "Evaluate"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "Calculator",
+      "properties": {
+        "calculator.saveToClipboard": {
+          "type": "boolean",
+          "default": true,
+          "description": "Specifies whether the result of a calculation is saved to the clipboard."
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
