--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "onCommand:calculator.evaluate",
     "onCommand:calculator.reset"
   ],
-  "main": "./out/extension.js",
+  "main": "./out/main.js",
   "contributes": {
     "commands": [
       {
